force-app/main/default/objects/SentimentBatchSettings__c/SentimentBatchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sentiment Batch Settings</label>
</CustomObject>