force-app/main/default/objects/SentimentBatchSettings__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>