force-app/main/default/objects/SentimentBatchSettings__c/fields/Retrieve_Only_Recently_Modified__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Only_Recently_Modified__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retrieve Only Recently Modified</label>
    <type>Checkbox</type>
</CustomField>