force-app/main/default/objects/SentimentBatchSettings__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>32</length>
    <type>Text</type>
</CustomField>