force-app/main/default/objects/SentimentBatchSettings__c/fields/Text_Transforms__c.field-meta.xml
<CustomField>
    <fullName>Text_Transforms__c</fullName>
    <label>Text Transforms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>